# string-genetics

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-rust/: gene.rs  lib.rs  pool.rs
src/wasm/: string_genetics.d.ts  string_genetics.js  string_genetics_bg.js  string_genetics_bg.wasm  string_genetics_bg.wasm.d.ts
