[package]
name = "string-genetics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src-rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
rand = "0.8.5"
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimize for small code size.
opt-level = "s"
# Link Time Optimzations
lto = true